Class QualityIndicatorFactory tagged as deprecated